--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 #ruby, #python, #js, #go, #r {
   display: none;
   font-size: 50px;
+  background-color: #f2c228;
 }
 
 #banner {
@@ -15,4 +16,8 @@
 img {
   height: 50%;
   width: 50%;
+}
+
+.container {
+  background-color: #f2c228;
 }
